# SymRL

./: .gitignore  README.md  analysis_test.json  analysis_train.json  nn_func_small_4x2_relu_2x6.v2.wts  policy.wts  policy.wts1.npz  policy.wts2.npz  pyproject.toml  requirements.txt
src/.models/best_train_model/: EpsilonGreedyPolicy.json  FeatureExtractor.pkl  LinearFuncApproximator.npz  Settings.json
src/symrl/: analysis.py  experiments.sh  human_policy.py  main.py  nn_func_small_4x2_relu_2x6.wts  run_gui.py  run_inference_on_test_data.py  run_train_with_best_config.py  test.py
src/symrl/algorithms/: mc.py
src/symrl/environment/: sympy_env.py  sympy_env_kivy_gui.py
src/symrl/func_approximator/: fourier_features.py  linear_fun_approx.py  simplified_term_var_const_count.py  term_var_const_count.py  var_const_count.py
src/symrl/policy/: greedy_policy.py  human_policy.py
src/symrl/tools/: eqn_generator.py  log_utils.py
symrl/: human_policy.py  linear_func.wts.npz  run_learning.py  test.py
symrl/algorithms/: base_aglo.py  td_zero.py
symrl/environment/: sympy_custom_eq.py  sympy_env.py  sympy_env_gui.py  sympy_env_kivy_gui.py  tool_test.py
symrl/func_approximator/: base_approx.py  linear_fun_approx.py  nn_fun_approx.py  op_count.py  op_var_count.py  op_var_rel_count.py  rel_term_var_const_count.py
symrl/policy/: base_policy.py  eps_greedy_policy.py  greedy_policy.py  random_policy.py  run_policy.py
symrl/tools/: eqn_generator.py
